# vrsystems

./: .env.example  .env.staging  .gitignore  API_KEYS_GUIDE.md  API_UPTIME_STRATEGY.md  CI_DISPATCH_APPROVALS.md  COMPREHENSIVE_TEST_ANALYSIS.html  COMPREHENSIVE_TEST_ANALYSIS.md  COMPREHENSIVE_TEST_REPORT.md  COMPREHENSIVE_VERIFICATION_OUTPUT.txt  COMPREHENSIVE_VERIFICATION_OUTPUT.txt.report.txt  COMPREHENSIVE_VERIFICATION_OUTPUT_REAL.txt  CONTENT_AUDIT.md  CONTRIBUTING.md  DATA_POLICY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_NOTES_MIGRATIONS.md  DEPLOYMENT_PRODUCTION_GUIDE.md  DNS_RECORDS_FOR_NAMECOM.md  DOCUMENTATION_INDEX.md  Dockerfile  EMAIL_SETUP_COMPLETE.md  ENTERPRISE_TESTS_CHANGELOG.md  EXPANSION_PLAN.md  EXTENSIVE_TEST_REPORT.md  FIXES_APPLIED.md  FIX_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENT_RECOMMENDATIONS.md  IMPROVEMENT_RECOMMENDATIONS_V9.md  IMPROVEMENT_REPORT.md  INTEGRATION_COMPLETE.md  INTEGRATION_GUIDE.md  LAUNCH_READY.md  LAUNCH_STEPS.md  LAUNCH_STRATEGY.md  LOCALSTACK_COMET_INTEGRATION.md  LOCAL_LAUNCH.md  OAUTH_SETUP.md  PLATFORM_AUDIT_REPORT.md  (+40 more)
.github/: PR_BODY.md  SETUP_ENTERPRISE_CI.md  dependabot.yml
.husky/: pre-commit
RELEASE_NOTES/: 2026-01-18-overlay-ui-polish.md  2026-01-22-browser-extension-cluely-overlay.md  feat-21-point-rename.md
browser-extension/: background.js
config/: prompt_templates.json
database/: api-pricing-schema.sql  supabase-schema.sql
deploy/: aws-cloudformation.yaml  cloudbuild.yaml  kubernetes.yaml
sdk/python/: README.md  build_sdk.ps1  pyproject.toml
sdk/python/verity/: __init__.py  client.py
(+720 files in other folders)
