[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verity-sdk"
version = "0.1.0"
description = "Minimal Verity Python SDK"
authors = [ { name = "Verity Systems" } ]
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
